--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi perferendis laborum voluptas nisi quam quos quae, tenetur dignissimos modi possimus!</h1>
+    <div class="container">
+        <div class="box">
+            <span></span>
+            <div class="content">
+                <h2>Card One</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. | 
+                    <br>Lorem ipsum dolor sit amet consectetur.
+                </p>
+                <a href="#">Lorem, ipsum.</a>
+            </div>
+        </div>
+        <div class="box">
+            <span></span>
+            <div class="content">
+                <h2>Card Two</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. | 
+                    <br>Lorem ipsum dolor sit amet consectetur.
+                </p>
+                <a href="#">Lorem, ipsum.</a>
+            </div>
+        </div>
+        <div class="box">
+            <span></span>
+            <div class="content">
+                <h2>Card Three</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. | 
+                    <br>Lorem ipsum dolor sit amet consectetur.
+                </p>
+                <a href="#">Lorem, ipsum.</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
